Hack in new sample Compose app

--- a/leakcanary-android-sample/build.gradle
+++ b/leakcanary-android-sample/build.gradle
@@ -14,6 +14,7 @@ keeper {
 
 dependencies {
   debugImplementation projects.leakcanaryAndroid
+  debugImplementation projects.leakcanaryAppService
   // debugImplementation projects.leakcanaryAndroidStartup
 
   // Uncomment to use the :leakcanary process
