--- a/settings.gradle
+++ b/settings.gradle
@@ -6,6 +6,9 @@ include ':leakcanary-android-release'
 include ':leakcanary-android-sample'
 include ':leakcanary-android-startup'
 include ':leakcanary-android-utils'
+include ':leakcanary-app'
+include ':leakcanary-app-aidl'
+include ':leakcanary-app-service'
 include ':leakcanary-object-watcher'
 include ':leakcanary-object-watcher-android'
 include ':leakcanary-object-watcher-android-androidx'
