--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -29,6 +29,7 @@ gradlePlugin-binaryCompatibility = { module = "org.jetbrains.kotlinx:binary-comp
 gradlePlugin-mavenPublish = { module = "com.vanniktech:gradle-maven-publish-plugin", version = "0.18.0" }
 gradlePlugin-detekt = { module = "io.gitlab.arturbosch.detekt:detekt-gradle-plugin", version = "1.6.0" }
 gradlePlugin-keeper = { module = "com.slack.keeper:keeper", version = "0.7.0" }
+gradlePlugin-sqldelight = { module = "com.squareup.sqldelight:gradle-plugin", version = "1.5.3" }
 
 kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlinLib" }
 kotlin-reflect = { module = "org.jetbrains.kotlin:kotlin-reflect", version.ref = "kotlinLib" }
