--- a/leakcanary-app/build.gradle
+++ b/leakcanary-app/build.gradle
@@ -1,6 +1,10 @@
 plugins {
   id("com.android.application")
   id("org.jetbrains.kotlin.android")
+  id("com.squareup.sqldelight")
+  id("com.google.dagger.hilt.android")
+  id("kotlin-kapt")
+  id("kotlin-parcelize")
 }
 
 ext {
@@ -24,7 +28,7 @@ android {
 	// TODO update versions.compileSdk to 32
 	targetSdk 32
     // targetSdk versions.compileSdk
-	
+
     buildConfigField "String", "GIT_SHA", "\"${gitSha()}\""
 
     // TODO Figure out versioning scheme. Should this follow LeakCanary releases?
@@ -75,9 +79,12 @@ android {
 dependencies {
   implementation projects.leakcanaryAppAidl
   // TODO Move these to ./gradle/libs/versions/toml
+  implementation "com.squareup.sqldelight:android-driver:1.5.3"
+  implementation "com.squareup.sqldelight:coroutines-extensions:1.5.3"
   implementation 'androidx.core:core-ktx:1.7.0'
-  implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-  implementation 'androidx.activity:activity-compose:1.3.1'
+  implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+  implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
+  implementation 'androidx.activity:activity-compose:1.5.1'
   implementation "androidx.compose.ui:ui:$compose_version"
   implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
   implementation 'androidx.compose.material3:material3:1.0.0-alpha02'
@@ -87,5 +94,12 @@ dependencies {
   androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
   debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
   debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
-  debugImplementation projects.leakcanaryAndroid
+  // TODO Split out what's included in debug vs the subset for release
+  implementation projects.leakcanaryAndroid
+  implementation 'com.google.dagger:hilt-android:2.43.2'
+  kapt 'com.google.dagger:hilt-compiler:2.43.2'
+}
+
+kapt {
+  correctErrorTypes true
 }
