--- a/leakcanary-app/src/main/AndroidManifest.xml
+++ b/leakcanary-app/src/main/AndroidManifest.xml
@@ -1,26 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
-
-<!--  <queries>-->
-<!--&lt;!&ndash;    <package android:name="com.example.leakcanary" />&ndash;&gt;-->
-<!--  </queries>-->
+  xmlns:tools="http://schemas.android.com/tools"
+  package="org.leakcanary">
 
   <application
-      android:allowBackup="true"
-      android:dataExtractionRules="@xml/data_extraction_rules"
-      android:fullBackupContent="@xml/backup_rules"
-      android:icon="@mipmap/ic_launcher"
-      android:label="@string/app_name"
-      android:roundIcon="@mipmap/ic_launcher_round"
-      android:supportsRtl="true"
-      android:theme="@style/Theme.MyApplication"
-      tools:targetApi="31">
+    android:allowBackup="true"
+    android:dataExtractionRules="@xml/data_extraction_rules"
+    android:fullBackupContent="@xml/backup_rules"
+    android:icon="@mipmap/ic_launcher"
+    android:label="@string/app_name"
+    android:roundIcon="@mipmap/ic_launcher_round"
+    android:supportsRtl="true"
+    android:name=".LeakCanaryApp"
+    android:theme="@style/Theme.MyApplication"
+    tools:targetApi="31">
     <activity
-        android:name=".MainActivity"
-        android:exported="true"
-        android:label="@string/app_name"
-        android:theme="@style/Theme.MyApplication">
+      android:name=".MainActivity"
+      android:exported="true"
+      android:label="@string/app_name"
+      android:theme="@style/Theme.MyApplication">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
 
@@ -28,8 +26,8 @@
       </intent-filter>
 
       <meta-data
-          android:name="android.app.lib_name"
-          android:value="" />
+        android:name="android.app.lib_name"
+        android:value="" />
     </activity>
 
     <service
