--- a/leakcanary-app/build.gradle
+++ b/leakcanary-app/build.gradle
@@ -8,7 +8,7 @@ plugins {
 }
 
 ext {
-  compose_version = '1.1.1'
+  compose_version = '1.2.1'
 }
 
 def gitSha() {
@@ -17,16 +17,16 @@ def gitSha() {
 
 android {
   namespace 'org.leakcanary'
-  // TODO update versions.compileSdk to 32
-  compileSdk 32
+  // TODO update versions.compileSdk to 33
+  compileSdk 33
   // compileSdk versions.compileSdk
 
   defaultConfig {
     applicationId "org.leakcanary"
     // 21 required by Compose
     minSdk 21
-	// TODO update versions.compileSdk to 32
-	targetSdk 32
+	// TODO update versions.compileSdk to 33
+	targetSdk 33
     // targetSdk versions.compileSdk
 
     buildConfigField "String", "GIT_SHA", "\"${gitSha()}\""
@@ -81,13 +81,13 @@ dependencies {
   // TODO Move these to ./gradle/libs/versions/toml
   implementation "com.squareup.sqldelight:android-driver:1.5.3"
   implementation "com.squareup.sqldelight:coroutines-extensions:1.5.3"
-  implementation 'androidx.core:core-ktx:1.7.0'
+  implementation 'androidx.core:core-ktx:1.9.0'
   implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
   implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
   implementation 'androidx.activity:activity-compose:1.5.1'
   implementation "androidx.compose.ui:ui:$compose_version"
   implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-  implementation 'androidx.compose.material3:material3:1.0.0-alpha02'
+  implementation 'androidx.compose.material3:material3:1.0.0-beta02'
   testImplementation 'junit:junit:4.13.2'
   androidTestImplementation 'androidx.test.ext:junit:1.1.3'
   androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
